<resources>
    <string name="app_name">Game Emulator</string>
    <string name="tie">IT\'S A TIE!</string>
    <string name="new_game_bt_label">New Game</string>

    <string name="start_game">Start Game</string>
    <string name="scoreboard">View Scoreboard</string>
    <string name="player_1">Select Player 1</string>
    <string name="player_2">Select Player 2</string>
    <string name="add_player">Add Player</string>
    <string name="delete_player">Delete Player</string>

    <string name="scoreboard_name">\tPlayer\t</string>
    <string name="scoreboard_wins">\tWins\t</string>
    <string name="scoreboard_losses">\tLosses\t</string>
    <string name="scoreboard_ties">\tTies\t</string>

    <string name="save_player">Save Player</string>
    <string name="add_new_player">Add New Player</string>

    <string name="delete_this_player">Delete This Player</string>
    <string name="delete_warning_title">Warning</string>
    <string name="delete_warning_message">Are you sure you want to delete this player?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="new_player_hint">Enter name here</string>
    <string name="delete_player_prompt">Select player to delete</string>

    <string name="developer_signature">Created by Gabriel Isaac Feliz</string>
</resources>
